[gd_scene load_steps=64 format=2]

[ext_resource path="res://OGA STUFF/golem/golem-walk.png" type="Texture" id=1]
[ext_resource path="res://combat demo/scripts/unit.gd" type="Script" id=2]
[ext_resource path="res://combat demo/scripts/unit states/Idle.gd" type="Script" id=3]
[ext_resource path="res://combat demo/scripts/unit states/Walk.gd" type="Script" id=4]
[ext_resource path="res://combat demo/scripts/unit states/UnitStateMachine.gd" type="Script" id=5]
[ext_resource path="res://combat demo/objects/Stats.gd" type="Script" id=6]
[ext_resource path="res://OGA STUFF/golem/golem-atk.png" type="Texture" id=7]
[ext_resource path="res://combat demo/scripts/unit states/Attack.gd" type="Script" id=8]
[ext_resource path="res://combat demo/objects/Death.gd" type="Script" id=9]
[ext_resource path="res://OGA STUFF/golem/golem-die.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "attack_down"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack_left"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, -16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack_right"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, -16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack_up"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "death"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle_left"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle_up"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=10]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19, 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=12]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=13]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "attack_up"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "attack_down"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "attack_right"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "attack_left"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "attack_right"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "attack_right"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "attack_left"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "attack_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 14 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 15 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 16 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 17 )
blend_point_3/pos = Vector2( -1, 0 )
blend_point_4/node = SubResource( 18 )
blend_point_4/pos = Vector2( 1, -1 )
blend_point_5/node = SubResource( 19 )
blend_point_5/pos = Vector2( 1, 1 )
blend_point_6/node = SubResource( 20 )
blend_point_6/pos = Vector2( -1, -1 )
blend_point_7/node = SubResource( 21 )
blend_point_7/pos = Vector2( -1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "idle_up"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=32]
blend_point_0/node = SubResource( 24 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 25 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 26 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 27 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 28 )
blend_point_4/pos = Vector2( 1, -1 )
blend_point_5/node = SubResource( 29 )
blend_point_5/pos = Vector2( 1, 1 )
blend_point_6/node = SubResource( 30 )
blend_point_6/pos = Vector2( -1, 1 )
blend_point_7/node = SubResource( 31 )
blend_point_7/pos = Vector2( -1, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "walk_top"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "walk_down"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=41]
blend_point_0/node = SubResource( 33 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 34 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 35 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 36 )
blend_point_3/pos = Vector2( -1, 0 )
blend_point_4/node = SubResource( 37 )
blend_point_4/pos = Vector2( 1, -1 )
blend_point_5/node = SubResource( 38 )
blend_point_5/pos = Vector2( -1, -0.9 )
blend_point_6/node = SubResource( 39 )
blend_point_6/pos = Vector2( -1, 1 )
blend_point_7/node = SubResource( 40 )
blend_point_7/pos = Vector2( 1, 0.9 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachine" id=49]
states/Attack/node = SubResource( 22 )
states/Attack/position = Vector2( 720, 286 )
states/Dead/node = SubResource( 23 )
states/Dead/position = Vector2( 540, 279 )
states/Idle/node = SubResource( 32 )
states/Idle/position = Vector2( 720, 177 )
states/Walk/node = SubResource( 41 )
states/Walk/position = Vector2( 531, 177 )
transitions = [ "Walk", "Idle", SubResource( 42 ), "Idle", "Walk", SubResource( 43 ), "Attack", "Idle", SubResource( 44 ), "Idle", "Attack", SubResource( 45 ), "Idle", "Dead", SubResource( 46 ), "Attack", "Dead", SubResource( 47 ), "Walk", "Dead", SubResource( 48 ) ]
start_node = "Idle"
graph_offset = Vector2( 107, 85 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=50]

[sub_resource type="StyleBoxFlat" id=51]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=52]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=53]
bg_color = Color( 0.266667, 1, 0, 1 )

[node name="Unit" type="Node2D"]
use_parent_material = true
z_index = 10
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
vframes = 4
hframes = 7
frame = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_down = SubResource( 1 )
anims/attack_left = SubResource( 2 )
anims/attack_right = SubResource( 3 )
anims/attack_up = SubResource( 4 )
anims/death = SubResource( 5 )
anims/idle_down = SubResource( 6 )
anims/idle_left = SubResource( 7 )
anims/idle_right = SubResource( 8 )
anims/idle_up = SubResource( 9 )
anims/walk_down = SubResource( 10 )
anims/walk_left = SubResource( 11 )
anims/walk_right = SubResource( 12 )
anims/walk_top = SubResource( 13 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 49 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 50 )
parameters/Attack/blend_position = Vector2( 0.000828505, 0.985916 )
parameters/Idle/blend_position = Vector2( -0.00248551, -0.0621119 )
parameters/Walk/blend_position = Vector2( -0.00722891, 0 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Stats" type="Node" parent="."]
script = ExtResource( 6 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -13.9364
margin_top = -54.6541
margin_right = 14.0636
margin_bottom = -48.6541
rect_pivot_offset = Vector2( 82.1387, 31.281 )
custom_styles/fg = SubResource( 51 )
custom_styles/bg = SubResource( 52 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionBar" type="ProgressBar" parent="."]
visible = false
margin_left = -13.908
margin_top = -63.2783
margin_right = 14.092
margin_bottom = -57.2783
rect_pivot_offset = Vector2( 82.1387, 31.281 )
custom_styles/fg = SubResource( 53 )
custom_styles/bg = SubResource( 52 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
